--- a/server/package.json
+++ b/server/package.json
@@ -7,17 +7,24 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.18.1",
+    "mongoose": "^6.3.2",
     "morgan": "^1.10.0",
-    "nasa-project": "file:.."
+    "nasa-project": "file:..",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "jest": "^28.0.3",
