added docker files

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "set BUILD_PATH=../server/public&& react-scripts build",
+    "build-docker": "BUILD_PATH=../server/public react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
@@ -38,4 +39,5 @@
     "nth-check@1.0.2": "2.0.1"
   }
 }
+
 
